--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typescript": "2.7.2",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "crypto-js": "^3.1.6"
   }
 }
