--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "test": "ng test",
     "e2e": "ng e2e"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ws": "^3.0.0",
+    "crypto-js": "^3.1.6"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
     "@angular/cli": "6.0.3",
@@ -73,7 +76,6 @@
     "typescript": "2.7.2",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
-    "zone.js": "0.8.26",
-    "crypto-js": "^3.1.6"
+    "zone.js": "0.8.26"
   }
 }
