--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "ws": "^3.0.0",
-    "crypto-js": "^3.1.6"
+    "crypto-js": "^3.1.6",
+    "ws": "^3.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
