--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "bonjour": "^3.5.0",
     "crypto-js": "^3.1.6",
     "ws": "^3.0.0"
   },
@@ -52,6 +53,7 @@
     "@angular/router": "6.0.3",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
+    "@types/bonjour": "^3.5.5",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.9.4",
