--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "^6.0.7",
+    "@angular/cdk": "^6.3.2",
+    "@angular/material": "^6.3.2",
     "crypto-js": "^3.1.6",
+    "hammerjs": "^2.0.8",
     "ws": "^3.0.0"
   },
   "devDependencies": {
